# 2024SS-ImageProcess

./: README.md
TP2/: TP2-Reduction-Filter-Morphology.py  TP2-discrete_fourier_transform.py
TP2/TP_Fichiers/1-OpenCV-Basic/c++/: CMakeLists.txt  main.cpp  main_answers.cpp
TP2/TP_Fichiers/1-OpenCV-Basic/python/: OpenCV-basic.py
TP2/TP_Fichiers/2-OpenCV-Morphology/c++/: CMakeLists.txt  Morphology.cpp
TP2/TP_Fichiers/2-OpenCV-Morphology/python/: OpenCV-Morphology.py
TP2/TP_Fichiers/2-OpenCV-Morphology/python/imagesDeTest/: squares.tif
TP2/TP_Fichiers/3-OpenCV-DFT/c++/: CMakeLists.txt  discrete_fourier_transform.cpp
TP2/TP_Fichiers/imagesDeTest/: Cell_Colony.tif
TP2/imagesDeTest/__MACOSX/: ._imagesDeTest
TP3/: TP3_2303.docx  TP3_application.py
TP4/: TP 4.docx  autoroute.py  cars_count.py  suivi_flux_lumineux.py
TP4/video/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+574 more)
TP5/: imageStitching.py  kimi.py
